--- a/css/home.css
+++ b/css/home.css
@@ -30,12 +30,12 @@ clear:left;
 }
 
 .arrow 	{
-	margin-left: 40%;	
 	width: 20%;
 	height:auto;
 	position:relative;
 	top: 50px;
-	
+	display: inline-block;
+	align-items: center;
 }
 
 .firstpage{
@@ -96,5 +96,22 @@ height: 100vh;
 
 #gallery{
 height: 100vh;
-
 }
+
+h3, h4, h5 {
+	font-size: 2em;
+	color: white;
+	
+}
+.one, .two, .three {
+	width: 200px;
+	height: auto;
+	position: relative;
+	left:60px;
+	display: inline-block
+	
+}
+footer {
+	color: white;
+text-align: left}
+#why img {left: 0}
